syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package pong;

// The greeting service definition.
service Ponger {
  // Sends a greeting
  rpc SetPlayerPosition (SetPlayerPositionRequest) returns (SetPlayerPositionReply) {}
}

message SetPlayerPositionRequest {
  int32 Id = 1;
  int32 X = 2;
  int32 Y = 3;
}

// The response message containing the greetings
message SetPlayerPositionReply {
  int32 Id = 1;
  int32 X = 2;
  int32 Y = 3;
}
